<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PantryProtector!</string>

    <string name="app_name">Pantry Protector</string>
    <string name="scan_text">Scan Now</string>
    <string name="skip_text">Skip</string>
    <string name="abort_text">Abort</string>
    <string name="no_itenz">There are no items in the inventory</string>
	<string name="menu_insert">Add Item</string>
	<string name="menu_delete">Delete Item</string>
	<string name="item_summary">Summary</string>
	<string name="item_description">Delete Item</string>
	<string name="edit_summary">Summary</string>
	<string name="edit_description">Description</string>
	<string name="edit_confirm">Confirm</string>
    <string name="edit_expiration">Expiration Date</string>

	<color name="listcolor">#000000</color>
	<color name="white">#FFFFFF</color>
    <string name="local_service_started">1234</string>
    <string name="Blank"> </string>
    <string name="local_service_stopped">Local Notification Service Stopped</string>
    <string name="local_service_connected">Local Service Connected</string>
    <string name="local_service_label">Local Service Label</string>
    <string name="local_service_disconnected">Local Service Disconnected</string>
    <string-array name="sort_by">
        <item>None</item><item>Name</item>
        <item>Location</item>
        <item>Expiration Date</item>
        
    </string-array>
    <string-array name="alpha_filter"><item>None</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        
    </string-array>
    <string name="sort_text">Sort By</string>
    <string name="filter_text">Filter By</string>
    <string name="edit_cancel">Cancel</string>

</resources>