<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/listcolor">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1">
        <LinearLayout android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" android:id="@+id/linearLayout2">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_weight="1" android:text="@string/sort_text" android:layout_width="wrap_content"></TextView>
            <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:entries="@array/sort_by" android:id="@+id/inv_sort" android:layout_weight="1" android:prompt="@string/sort_text"></Spinner>
        </LinearLayout>
        <LinearLayout android:layout_height="match_parent" android:layout_width="0dp" android:id="@+id/linearLayout3" android:layout_weight="1" android:orientation="vertical">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1" android:text="@string/filter_text" android:layout_width="wrap_content"></TextView>
            <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/inv_filter" android:layout_weight="1" android:prompt="@string/filter_text"></Spinner>
        </LinearLayout>
    </LinearLayout>
    <ListView android:id="@android:id/list" android:layout_height="wrap_content" android:layout_width="wrap_content"></ListView>
	<TextView android:id="@android:id/empty" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/no_itenz" />

</LinearLayout>
